@@ -41,6 +41,8 @@ PHP                                                                        NEWS
     php_filter.h).
 - Fixed wrong signature initialization in imagepng (Takeshi Abe)
 - Added optimization for imageline with horizontal and vertial lines (Pierre)
+- Fixed bug #39621 (str_replace() is not binary safe on strings with equal 
+  length). (Tony)
 - Fixed bug #39613 (Possible segfault in imap initialization due to missing 
   module dependency). (wharmby at uk dot ibm dot com, Tony)
 - Fixed bug #39602 (Invalid session.save_handler crashes PHP). (Dmitry)
